<?php

declare(strict_types=1);

namespace DoctrineMigrations;

use Doctrine\DBAL\Schema\Schema;
use Doctrine\Migrations\AbstractMigration;

/**
 * Auto-generated Migration: Please modify to your needs!
 */
final class Version20260303105848 extends AbstractMigration
{
    public function getDescription(): string
    {
        return '';
    }

    public function up(Schema $schema): void
    {
        // this up() migration is auto-generated, please modify it to your needs
        $this->addSql('CREATE TABLE player_session (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, score INT NOT NULL, joined_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, finished_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, quiz_session_id INT DEFAULT NULL, user_id INT DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_B1B02A912850CBE3 ON player_session (quiz_session_id)');
        $this->addSql('CREATE INDEX IDX_B1B02A91A76ED395 ON player_session (user_id)');
        $this->addSql('CREATE TABLE quiz_session (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, code VARCHAR(20) NOT NULL, started_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, ended_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, quiz_id INT DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_C21E7874853CD175 ON quiz_session (quiz_id)');
        $this->addSql('ALTER TABLE player_session ADD CONSTRAINT FK_B1B02A912850CBE3 FOREIGN KEY (quiz_session_id) REFERENCES quiz_session (id)');
        $this->addSql('ALTER TABLE player_session ADD CONSTRAINT FK_B1B02A91A76ED395 FOREIGN KEY (user_id) REFERENCES "user" (id)');
        $this->addSql('ALTER TABLE quiz_session ADD CONSTRAINT FK_C21E7874853CD175 FOREIGN KEY (quiz_id) REFERENCES quiz (id)');
        $this->addSql('ALTER TABLE user_answer DROP CONSTRAINT fk_bf8f5118a76ed395');
        $this->addSql('DROP INDEX idx_bf8f5118a76ed395');
        $this->addSql('ALTER TABLE user_answer RENAME COLUMN user_id TO player_session_id');
        $this->addSql('ALTER TABLE user_answer ADD CONSTRAINT FK_BF8F51183E9A68E2 FOREIGN KEY (player_session_id) REFERENCES player_session (id)');
        $this->addSql('CREATE INDEX IDX_BF8F51183E9A68E2 ON user_answer (player_session_id)');
    }

    public function down(Schema $schema): void
    {
        // this down() migration is auto-generated, please modify it to your needs
        $this->addSql('ALTER TABLE player_session DROP CONSTRAINT FK_B1B02A912850CBE3');
        $this->addSql('ALTER TABLE player_session DROP CONSTRAINT FK_B1B02A91A76ED395');
        $this->addSql('ALTER TABLE quiz_session DROP CONSTRAINT FK_C21E7874853CD175');
        $this->addSql('DROP TABLE player_session');
        $this->addSql('DROP TABLE quiz_session');
        $this->addSql('ALTER TABLE user_answer DROP CONSTRAINT FK_BF8F51183E9A68E2');
        $this->addSql('DROP INDEX IDX_BF8F51183E9A68E2');
        $this->addSql('ALTER TABLE user_answer RENAME COLUMN player_session_id TO user_id');
        $this->addSql('ALTER TABLE user_answer ADD CONSTRAINT fk_bf8f5118a76ed395 FOREIGN KEY (user_id) REFERENCES "user" (id) NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('CREATE INDEX idx_bf8f5118a76ed395 ON user_answer (user_id)');
    }
}
